# docs/swagger.json
@@ -272,10 +272,35 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"CommentOutput": {
+			"FetchCommentsOutput": {
 				"properties": {
+					"creator": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"name",
+							"id"
+						],
+						"type": "object"
+					},
 					"updatedAt": {
-						"type": "string"
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "string",
+								"enum": [
+									"no updates"
+								]
+							}
+						]
 					},
 					"createdAt": {
 						"type": "string"
@@ -291,32 +316,43 @@
 					"content": {
 						"type": "string"
 					},
-					"creatorId": {
-						"type": "string"
-					},
 					"id": {
 						"type": "string"
 					}
 				},
 				"required": [
+					"creator",
 					"updatedAt",
 					"createdAt",
 					"dislikes",
 					"likes",
 					"content",
-					"creatorId",
 					"id"
 				],
 				"type": "object"
 			},
-			"FetchPostsOutput": {
+			"HttpResponse_FetchCommentsOutput-Array_": {
 				"properties": {
-					"comments": {
+					"payload": {
 						"items": {
-							"$ref": "#/components/schemas/CommentOutput"
+							"$ref": "#/components/schemas/FetchCommentsOutput"
 						},
 						"type": "array"
 					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"FetchPostsOutput": {
+				"properties": {
 					"creator": {
 						"properties": {
 							"name": {
@@ -354,7 +390,6 @@
 					}
 				},
 				"required": [
-					"comments",
 					"creator",
 					"createdAt",
 					"dislikes",
@@ -384,6 +419,123 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GetPost": {
+				"properties": {
+					"comments": {
+						"items": {
+							"$ref": "#/components/schemas/FetchCommentsOutput"
+						},
+						"type": "array"
+					},
+					"creator": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"id": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"name",
+							"id"
+						],
+						"type": "object"
+					},
+					"updatedAt": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "string",
+								"enum": [
+									"no updates"
+								]
+							}
+						]
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"dislikes": {
+						"type": "number",
+						"format": "double"
+					},
+					"likes": {
+						"type": "number",
+						"format": "double"
+					},
+					"content": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"comments",
+					"creator",
+					"updatedAt",
+					"createdAt",
+					"content",
+					"id"
+				],
+				"type": "object"
+			},
+			"HttpResponse_GetPost_": {
+				"properties": {
+					"payload": {
+						"$ref": "#/components/schemas/GetPost"
+					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserOutput": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"name",
+					"id"
+				],
+				"type": "object"
+			},
+			"HttpResponse_UserOutput_": {
+				"properties": {
+					"payload": {
+						"$ref": "#/components/schemas/UserOutput"
+					},
+					"statusCode": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"payload",
+					"statusCode"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"LikeDislikeRequest": {
 				"properties": {
 					"requestLike": {
@@ -400,63 +552,6 @@
 					"requestLike",
 					"requestContentId",
 					"requestUser"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_User.Exclude_keyofUser.password__": {
-				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"created_at": {
-						"anyOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{
-								"type": "string"
-							}
-						]
-					},
-					"role": {
-						"$ref": "#/components/schemas/USER_ROLES"
-					}
-				},
-				"required": [
-					"id",
-					"name",
-					"email",
-					"created_at",
-					"role"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_User.password_": {
-				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.password__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"HttpResponse_Omit_User.password__": {
-				"properties": {
-					"payload": {
-						"$ref": "#/components/schemas/Omit_User.password_"
-					},
-					"statusCode": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"payload",
-					"statusCode"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -728,6 +823,32 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "Execute",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HttpResponse_FetchCommentsOutput-Array_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/posts": {
@@ -757,23 +878,6 @@
 						}
 					}
 				}
-			},
-			"get": {
-				"operationId": "Execute",
-				"responses": {
-					"200": {
-						"description": "Success",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_FetchPostsOutput-Array_"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
 			}
 		},
 		"/comments/{id}": {
@@ -846,6 +950,32 @@
 					}
 				}
 			},
+			"get": {
+				"operationId": "Execute",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HttpResponse_GetPost_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
 			"put": {
 				"operationId": "Execute",
 				"responses": {
@@ -872,6 +1002,53 @@
 						}
 					}
 				}
+			}
+		},
+		"/posts/page/{page}": {
+			"get": {
+				"operationId": "Execute",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HttpResponse_FetchPostsOutput-Array_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/users/{id}": {
+			"get": {
+				"operationId": "Execute",
+				"responses": {
+					"200": {
+						"description": "Success",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/HttpResponse_UserOutput_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/posts/{id}/like": {
@@ -905,7 +1082,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/HttpResponse_Omit_User.password__"
+									"$ref": "#/components/schemas/HttpResponse_string_"
 								}
 							}
 						}
@@ -928,7 +1105,7 @@
 	},
 	"servers": [
 		{
-			"url": "https://localhost:3003/v1"
+			"url": "https://localhost:3009/v1"
 		}
 	]
 }
