# src/http/controllers/fetch-posts/fetch-posts.controller.ts
@@ -1,31 +1,15 @@
 import { FetchPostsUseCase } from '../../../use-cases/fetch-posts/fetch-posts'
-import { Route, Get, SuccessResponse, Body } from 'tsoa'
+import { Route, Get, SuccessResponse } from 'tsoa'
 import { HttpResponse } from '../../response/response'
 import { FetchPostsOutput } from '../../../@types/types'
-import { z } from 'zod'
-
-interface FetchPostsControllerRequest {
-  requestPage: string
-}
 
 @Route('posts')
 export class FetchPostsController {
   constructor(private fetchPostsUseCase: FetchPostsUseCase) {}
   @SuccessResponse('200', 'Success')
   @Get('page/:page')
-  async execute(
-    @Body()
-    { requestPage }: FetchPostsControllerRequest,
-  ): Promise<HttpResponse<FetchPostsOutput[]>> {
-    const fetchPostsInputSchema = z.object({
-      page: z.coerce.number(),
-    })
-
-    const { page } = fetchPostsInputSchema.parse({
-      page: requestPage,
-    })
-
-    const { posts } = await this.fetchPostsUseCase.execute({ page })
+  async execute(): Promise<HttpResponse<FetchPostsOutput[]>> {
+    const { posts } = await this.fetchPostsUseCase.execute()
 
     return new HttpResponse<FetchPostsOutput[]>(posts, 200)
   }
